--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "deploy": "vercel --prod",
+    "login": "vercel login",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -16,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
-    "vercel": "^33.2.0"
+    "vercel": "^33.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
